# django-api-todo_list

./: pyproject.toml
config/: settings.py  urls.py
todos/: admin.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py
